<resources>
    <string name="app_name">myPogoda()</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="_31_c_7_c">31°C / 7°C</string>
    <string name="sunny">Sunny</string>
    <string name="_35_c">35°C</string>
    <string name="moscow">Moscow</string>
    <string name="_18_10_2024_12_15">18/10/2024 12:15</string>
</resources>